# llm-research-lab

./: .gcloudignore  .gitignore  BENCHMARK_COMPLIANCE_REPORT.md  Cargo.toml  Dockerfile  LICENSE.md  PHASE_2B_INFRA_INTEGRATION.md  README.md  package.json
.swarm/: state.json
adapters/: evaluators.rs  metrics.rs  mod.rs  scoring.rs  workflows.rs
benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
benchmarks/output/: summary.md
deploy/gcloud/: DEPLOYMENT.md  cloudbuild.yaml  deploy-gcloud.sh  env.yaml  iam-setup.sh  service.yaml
docs/: PHASE7_HARDENING_VERIFICATION.md
llm-research-agents/: Cargo.toml
llm-research-agents/src/: lib.rs
llm-research-agents/src/agents/: hypothesis.rs  metric_agent.rs  mod.rs  telemetry.rs  traits.rs
llm-research-agents/src/clients/: mod.rs  ruvector.rs
llm-research-agents/src/contracts/: common.rs  decision_event.rs  hypothesis.rs  metrics.rs  mod.rs
llm-research-agents/src/handlers/: hypothesis.rs  metric.rs  mod.rs
llm-research-agents/src/telemetry/: mod.rs
llm-research-agents/tests/: integration_tests.rs
llm-research-api/: Cargo.toml
llm-research-api/src/: lib.rs
llm-research-cli/: Cargo.toml
llm-research-cli/src/: cli.rs  main.rs
llm-research-cli/src/commands/: agents.rs  mod.rs  run.rs
llm-research-core/: Cargo.toml
llm-research-lab/: Cargo.toml
llm-research-lab/src/: config.rs  main.rs
llm-research-sdk/: Cargo.toml
