[workspace]
resolver = "2"
members = [
    "llm-research-lab",
    "llm-research-core",
    "llm-research-agents",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM Research Lab Team"]
license = "Proprietary"
repository = "https://github.com/yourusername/llm-research-lab"

[workspace.dependencies]
# Async runtime and HTTP
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs and time
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Numerics
rust_decimal = { version = "1.37", features = ["serde-with-str"] }
rand = "0.8"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Concurrent data structures
dashmap = "6.0"

# Async utilities
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
url = "2.5"

# Internal workspace dependencies
llm-research-core = { path = "llm-research-core" }
llm-research-agents = { path = "llm-research-agents" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
lto = "fat"

# Dev dependencies for testing
[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.mockall]
version = "0.13"

[workspace.dependencies.proptest]
version = "1.5"

[workspace.dependencies.rstest]
version = "0.23"

[workspace.dependencies.pretty_assertions]
version = "1.4"

[workspace.dependencies.fake]
version = "3.0"
features = ["derive", "uuid", "chrono"]

[workspace.dependencies.wiremock]
version = "0.6"

[workspace.dependencies.test-case]
version = "3.3"

[workspace.dependencies.tempfile]
version = "3.14"
