[package]
name = "llm-research-lab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates (internal)
llm-research-agents.workspace = true

# Async runtime and HTTP
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# UUIDs
uuid.workspace = true

[dev-dependencies]
